; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_devices.c_Devices_GetHostPath.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_devices.c_Devices_GetHostPath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@h_devnum = common dso_local global i64 0, align 8
@atari_filename = common dso_local global i32 0, align 4
@host_path = common dso_local global i32 0, align 4
@Devices_atari_h_dir = common dso_local global i32* null, align 8
@atari_path = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @Devices_GetHostPath to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @Devices_GetHostPath(i32 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i64 @Devices_GetNumber(i32 %5)
  store i64 %6, i64* @h_devnum, align 8
  %7 = load i64, i64* @h_devnum, align 8
  %8 = icmp ult i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i64 0, i64* %2, align 8
  br label %26

10:                                               ; preds = %1
  %11 = load i64, i64* @h_devnum, align 8
  %12 = load i32, i32* @atari_filename, align 4
  %13 = call i64 @Devices_GetAtariPath(i64 %11, i32 %12)
  store i64 %13, i64* %4, align 8
  %14 = load i64, i64* %4, align 8
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %10
  store i64 0, i64* %2, align 8
  br label %26

17:                                               ; preds = %10
  %18 = load i32, i32* @host_path, align 4
  %19 = load i32*, i32** @Devices_atari_h_dir, align 8
  %20 = load i64, i64* @h_devnum, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @atari_path, align 4
  %24 = call i32 @Util_catpath(i32 %18, i32 %22, i32 %23)
  %25 = load i64, i64* %4, align 8
  store i64 %25, i64* %2, align 8
  br label %26

26:                                               ; preds = %17, %16, %9
  %27 = load i64, i64* %2, align 8
  ret i64 %27
}

declare dso_local i64 @Devices_GetNumber(i32) #1

declare dso_local i64 @Devices_GetAtariPath(i64, i32) #1

declare dso_local i32 @Util_catpath(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
